solved first 4 problems chtp3

--- a/chpts/chpt1.tex
+++ b/chpts/chpt1.tex
@@ -59,7 +59,7 @@
     \binom{n}{k}\frac{(n-k)!}{n!} = \frac{1}{k!}$. So,
     \begin{align*}
         \Pr\left[{\set{\sigma: \exists i, \sigma(i) = i}}\right] &= 1 - \frac{1}{2!} + \frac{1}{3!} - \ldots + \frac{(-1)^{n+1}}{n!}, \\
-        \lim_{n\to\infty} \Pr\left[{\set{\sigma: \exists i, \sigma(i) = i}}\right] &= 1 - \frac{1}{e}.
+        \lim_{n\to\infty} \Pr\left[{\set{\sigma: \exists i, \sigma(i) = i}}\right] &= \frac{1}{e}.
     \end{align*}
 \end{solution}
 \begin{problem}{6}
