--- a/main.tex
+++ b/main.tex
@@ -5,15 +5,20 @@
 \everymath{\displaystyle}
 \usepackage{tikz}
 \usepackage{hyperref}
-
+\usepackage{titlesec}
 \usepackage{xcolor}
 \definecolor{brickred}{rgb}{0.8, 0.25, 0.33}
 
-
 \newtheorem{lemma}{Lemma}[chapter]
 
+\title{\textsc{Problems and Solutions:} \\ 
+\textit{Theory of Probability and Random Processes, 2\textsuperscript{nd} Edition} \\ 
+~\\ \large Leonid B. Koralov and Yakov G. Sinai}
+\author{Alan Sun}
+\date{}
+
 \begin{document}
-% \fancytitle{\textit{Theory of Probability and Random Processes}}{Solutions}{Koralov and Sinai}
+\maketitle
 
 \chapter{Random Variables and Their Distributions}
 \input{chpts/chpt1.tex}
