some more measure theory problems

--- a/macros.tex
+++ b/macros.tex
@@ -242,6 +242,9 @@
 \renewcommand{\epsilon}{\varepsilon}
 \renewcommand{\phi}{\varphi}
 \newcommand{\lnorm}[2]{\left\lVert#1\right\rVert_{#2}}
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
+
 
 % PSet Titles
 \newcommand{\normaltitle}[3]{
