--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage[Lenny]{fncychap}
 \input{macros}
 \everymath{\displaystyle}
+\allowdisplaybreaks
 \usepackage{tikz}
 \usepackage{hyperref}
 \usepackage{titlesec}
