--- a/chpts/chpt3.tex
+++ b/chpts/chpt3.tex
@@ -23,7 +23,14 @@
 \begin{problem}{2}
 \end{problem}
 \begin{solution}
-    
+    \begin{align*}
+        \Exp{\xi} &\geq \sum_{k=1}^\infty k\cdot \Pr[k \leq \xi < k + 1], \\
+        &= \Pr[1 \leq \xi < 2] + 2\Pr[2 \leq \xi < 3] + 3\Pr[3 \leq \xi < 4] + \ldots, \\
+        &= \left(\sum_{k=1}^\infty \Pr[k \leq \xi < k+1]\right) + \Pr[2\leq \xi < 3] + 2\Pr[3 \leq \xi < 4] + \ldots, \\
+        &= 1 + \left(\sum_{k=2}^\infty \Pr[k \leq \xi < k+1]\right) + \ldots, \\
+        &= 1 + \frac{1}{2} + \frac{1}{3} + \ldots, \\
+        &\geq \infty.
+    \end{align*}
 \end{solution}
 
 \begin{problem}{3}
@@ -52,26 +59,61 @@
 \begin{problem}{5}
 \end{problem}
 \begin{solution}
+    Let $x$ be an arbitrary irrational number and also let $\epsilon > 0$. Then, choose $N\in\N$ such that $\log_2(1/\epsilon) + 1 < N$. Then, let 
+    \[
+        \delta = \min\left\{|x - x_k|\right\}_{k=1}^N.
+    \]
+    So, for any $x'$ such that $|x - x'| < \delta$, it must be that 
+    \begin{align*}
+        \left|F_\xi(x) - F_\xi(x')\right| &= \left|\sum_{x_j\,\text{s.t.}\,x_j<x} \frac{1}{2^j} - \sum_{x_j\,\text{s.t.}\,x_j<x'} \frac{1}{2^j}\right|, \\
+        &= \sum_{x_j\,\text{s.t.} x' \leq x_j < x} \frac{1}{2^j}.
+        \intertext{This equality comes from assuming, without the loss of generality, $x' < x$. So, then}
+        &\leq \sum_{j=N}^\infty \frac{1}{2^j}, \\
+        &= \frac{1}{2^{N-1}}, \\
+        &< \epsilon. \tag{by def.}
+    \end{align*}
+    Thus, $F_xi(\omega)$ is continuous for irrational $\omega$. 
 \end{solution}
 
 \begin{problem}{6}
 \end{problem}
 \begin{solution}
+    We first find the density of $\eta$. Consider first the distribution of $\eta$:
+    \begin{align*}
+        \Pr[\eta \leq x] &= \Pr\left[\frac{1}{\xi} \leq x\right], \\
+        &= 1 - \Pr\left[\xi < \frac{1}{x}\right], \\
+        &= 1 - F_\xi\left(\frac{1}{x}\right).
+    \end{align*}
+    Therefore, the density function of $\eta$, $p_\eta = \left(1-F_\xi\left(\frac{1}{x}\right)\right)' = \frac{1}{x^2}p_\xi\left(\frac{1}{x}\right)$. Now, we apply the definition of the expected value of $\xi$:
 \end{solution}
 
 \begin{problem}{7}
 \end{problem}
 \begin{solution}
+    Here, we are essentially showing that convergence in $L^1$ implies almost surely pointwise convergence. 
 \end{solution}
 
 \begin{problem}{8}
 \end{problem}
 \begin{solution}
+    We first show that convergence almost surely implies convergence in measure. 
 \end{solution}
 
 \begin{problem}{9}
 \end{problem}
 \begin{solution}
+    Apply integration by-parts:
+    \begin{align*}
+        \int_{-\infty}^\infty F(x+10) - F(x)~dx &= x(F(x+10) - F(x)) \Big\vert_{-\infty}^\infty - \int_{-\infty}^\infty x(p(x+10) - p(x))~dx, 
+    \end{align*}
+    where $p(x)$ is the density function corresponding to $F(\cdot)$. First, we evaluate the term on the left, since $lim_{x\to\infty} F(x) = 1$ and $\lim_{x\to-\infty} F(x) = 0$, it must be that $x(F(x+10) - F(x)) \Big\vert_{-\infty}^\infty = 0$. Therefore, it suffices to evaluate the term on the right, 
+    \begin{align*}
+        -\int_{-\infty}^\infty x(p(x+10) - p(x))~dx &= -\int_{-\infty}^\infty xp(x+10) - xp(x)~dx, \\
+        &= -\int_{-\infty}^\infty (x+10)p(x+10) - xp(x)~dx - \int_{-\infty}^\infty 10p(x+10)~dx, \\
+        &= -\int_{-\infty}^\infty up(u)~du - \int_{-\infty}^\infty xp(x) + 10, \\
+        &= 10.
+    \end{align*}
+    In general, it follows that for any $u \in \R$, $\int F(x + u) - F(x)~dx = u$ through the same calculation that we just performed. 
 \end{solution}
 
 \begin{problem}{10}
