--- a/macros.tex
+++ b/macros.tex
@@ -99,6 +99,8 @@
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\F}{\mathbb{F}}
 
+\newcommand{\PP}{\mathbb{P}}
+
 %Paired Delims
 \def\set#1{\left\{ #1 \right\}}
 \def\angle#1{\left\langle #1 \right\rangle}
