--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \definecolor{brickred}{rgb}{0.8, 0.25, 0.33}
 
 \newtheorem{lemma}{Lemma}[chapter]
+\newtheorem{theorem}{Theorem}[chapter]
 
 \title{\textsc{Problems and Solutions:} \\ 
 \textit{Theory of Probability and Random Processes, 2\textsuperscript{nd} Edition} \\ 
@@ -29,5 +30,8 @@
 \input{chpts/chpt3.tex}
 \chapter{Conditional Probabilities and Independence}
 \input{chpts/chpt4.tex}
+
+\chapter{Markov Chains with a Finite Number of States}
+\input{chpts/chpt5.tex}
 
 \end{document}
