--- a/toc/main.tex
+++ b/toc/main.tex
@@ -24,8 +24,6 @@
 
 \begin{document}
 
-\newenvironment*[][]{answer}{\if\showanswers}{\fi}
-
 \fancytitle{\textit{Theory of Probability and Random Processes}}{Need to Knows}{Koralov and Sinai}
 Here are a list of things, both theorems and problems, that I think are important to know how to do by heart. Therefore, they warrant frequent review.
 
@@ -71,6 +69,9 @@ Here are a list of things, both theorems and problems, that I think are importan
 \section{Lebesgue Integral and Mathematical Expectation}
 \begin{itemize}[nosep]
     \item[\cold] \textit{Define} the Riemann-Stieltjes integral.
+    \item[\cold] \textit{Define} almost surely convergence. 
+    \item[\cold] \textit{Define} convergence in measure. 
+    \item[\cold] \textit{Define} $L^p$ convergence.
 \end{itemize}
 
 \section{Conditional Probabilities and Independence}
