--- a/chpts/chpt2.tex
+++ b/chpts/chpt2.tex
@@ -3,6 +3,7 @@ Some brief notes before the problems:
     \item \color{brickred}{Koralov and Sinai use $\times$ instead of $\otimes$ for the product $\sigma$-algebra. Moving forward, the reader needs to be cautious about what the operands are. For if they are $\sigma$-algebras, we understand the result of the expression to be the aforementioned product.} 
 \end{itemize}
 \begin{problem}{1}
+    Find the probability that there are exactly three heads after five tosses of a symmetric coin.
 \end{problem}
 \begin{solution}
     Directly apply the definition of the binomial distribution. Let $X = \{0,1\}$. Define the random variable $\chi_i(\omega)$ for $1\leq i\leq 5$ to be 1 if $\omega = 1$ and zero otherwise. Then, let $\nu_5 = \sum_{i=1}^5 \chi_i$. $\nu_5$ is a binomial random variable. Thus,
@@ -11,6 +12,7 @@ Some brief notes before the problems:
     \end{align*}
 \end{solution}
 \begin{problem}{2}
+    Andrew and Bob are playing a game of table tennis. The game ends when the first player reaches 11 points if the other player has 9 points or less. However, if at any time the score is 10:10, then the game continues until one of the players is 2 points ahead. The probability that Andrew wins any given points is 60 percent. What is the probability that Andrew will go on to win the game if he is currently ahead 9:8.
 \end{problem}
 \begin{solution}
     We present two alternative ways to solve this problem one involving chains and the other geometric series. We first present the solution involving chains. We draw the state space below, where each node denotes a distinct score and the edges between states represent the transition probabilities
@@ -62,6 +64,7 @@ Some brief notes before the problems:
     \]
 \end{solution}
 \begin{problem}{3}
+    Will you consider a coin asymmetric if after 1000 coin tosses the number of heads is equal to 600?
 \end{problem}
 \begin{solution}
     We directly apply the de Moivre-Laplace Theorem. Let $X_i(\omega_i)$ be a random variable that is 1 if $\omega_i =\text{heads}$ and 0 otherwise. Then, let $\nu_n = \sum_{i=1}^n X_i$. Then, for $n=1000$, $\Exp{\nu_n} = 500$ and $\Var{\nu_n} = 250$. $k=600$ as the actual number of heads that we saw during all of the coin flips. Therefore, 
@@ -73,6 +76,11 @@ Some brief notes before the problems:
     So, it is highly unlikely that the coin is fair.
 \end{solution}
 \begin{problem}{4}
+    Let $\epsilon_n$ be a numeric sequence such that $\epsilon_n\sqrt{n}\to\infty$ as $n\to\infty$. Show that for a sequence of Bernoulli trials we have 
+    \[
+        \Pr\left[\left|\frac{\nu^n}{n} - p\right| < \epsilon_n\right] \to 1    
+    \]
+    as $n \to\infty$. 
 \end{problem}
 \begin{solution}
     We show that $\Pr\left[\left|\frac{\nu^n}{n} - p\right| > \epsilon_n\right] \to 0$ as $n\to \infty$:
@@ -87,6 +95,7 @@ Some brief notes before the problems:
     \textcolor{brickred}{\textit{Remark:}} Even though this problem is fairly simple, it demonstrates something profound about the law of large numbers --- its convergence rate. Specifically, the probability that $\nu^n$ lies in a neighborhood of $O(\sqrt{n})$ tends to 1, as $n\to\infty$. Moreover, the probability that $\nu^n = k$ decays with rate $O(1/\sqrt{n})$ if $k \in (np - O(\sqrt{n}), np + O(\sqrt{n}))$. This is easy to see since we can approximate the distribution within this neighborhood with a crude uniform distribution. Note that this is the exact setup of the De Moivre-Laplace Theorem.
 \end{solution}
 \begin{problem}{5}
+    Using the de Moivre-Laplace Theorem, estimate the probability that during 12000 tosses of a die the number 6 appeared between 1900 and 2100 times.
 \end{problem}
 \begin{solution}
     Let $\nu^n$ be the number of sixes that appear from $n$ tosses of a die. Then, it follows that $\Exp{\nu^{12000}} = 2000$ and $\Var\left[{\nu^{12000}}\right] = 12000\cdot\frac{5}{36} \approx 1666$. Using the de Moivre-Laplace Theorem, we approximate $\frac{\nu^n - \Exp{\nu^n}}{\sqrt{\Var[\nu^n]}}$ as a standard normal distribution. Therefore,
@@ -94,17 +103,18 @@ Some brief notes before the problems:
     where $\Phi(\cdot)$ is the distribution function of the normal distribution.
 \end{solution}
 \begin{problem}{6}
+    Let $\Omega$ be the space of sequences $\omega = (\omega_1,\ldots,\omega_n)$, where $\omega_i \in [0,1]$. Let $\PP_n$ be the probability distribution corresponding to the homogeneous sequence of independent trials, each $\omega_i$ having uniform distribution on $[0,1]$. Let $\eta_n = \min_{1\leq i\leq n} \omega_i$. Find $\PP_n(\eta_n \leq t)$ and $lim_{n\to\infty} \PP_n(n\eta_n \leq t)$.
 \end{problem}
 \begin{solution}
     \begin{align*}
-        \Pr[\eta_n \leq t] &= 1 - \Pr[\eta_n > t], \\
-        &= 1 - \Pr[\omega_i \geq t]^n, \tag{by i.i.d.}, \\
+        \Pr_n[\eta_n \leq t] &= 1 - \Pr_n[\eta_n > t], \\
+        &= 1 - \Pr_n[\omega_i \geq t]^n, \tag{by i.i.d.}, \\
         &= 1 - (1-t)^n.
     \end{align*}
     Next, we evaluate the limit as $n\to\infty$ of $n\eta_n$:
     \begin{align*}
-        \lim_{n\to\infty} \Pr[n\eta_n \leq t] &= \lim_{n\to\infty} 1 - \Pr[n\eta_n > t], \\
-        &= \lim_{n\to\infty} 1 - \Pr\left[\eta_n > \frac{t}{n}\right], \\
+        \lim_{n\to\infty} \Pr_n[n\eta_n \leq t] &= \lim_{n\to\infty} 1 - \Pr_n[n\eta_n > t], \\
+        &= \lim_{n\to\infty} 1 - \Pr_n\left[\eta_n > \frac{t}{n}\right], \\
         &= \lim_{n\to\infty} 1 - \left(1 - \frac{t}{n}\right)^n, \\
         &= 1-e^{-t}.
     \end{align*}
@@ -118,21 +128,10 @@ Some brief notes before the problems:
 \begin{problem}{8}
 \end{problem}
 \begin{solution}
-    Let $\Omega$ be the space of all binary sequences of length $n$ and also let $C_r$ be the set of all binary sequences of length $n$ with $r$ consecutive 1s. Then,  
-    \[
-        C_r = \bigsqcup_{i=1}^{n-r+1} \{\sigma \in \Omega: \sigma\,\text{has}\, r \,\text{consecutive 1s and is prefixed with}\, i-1\,\text{zeros}\}. \\
-    \]
-
-    % not just prefixed with zero, but there are no consecutive sequences 
-
-    Clearly, these sets is disjoint and contains any sequence that has $r$ consecutive 1s. Therefore, 
-    \begin{align*}
-        \Pr[C_r] &= \sum_{i=1}^{n-r+1} \Pr[\{\sigma \in \Omega: \sigma\,\text{has}\, r \,\text{consecutive 1s and is prefixed with}\, i-1\,\text{zeros}\}], \\
-        &= \sum_{i=1}^{n-r+1} \frac{1}{2^{r + i-1}}.
-    \end{align*}
 \end{solution}
 
 \begin{problem}{9}
+    Suppose that during a day the price of a certain stock either goes up by 3 percent with probability $1/2$ or goes down by 3 percent with probability $1/2$, and that outcomes on different days are independent. Approximate the probability that after 250 days the price of the stock will be at least as high as the current price.
 \end{problem}
 \begin{solution}
     Let $\Omega$ be the space of all sequences $(\omega_1, \ldots, \omega_n)$ of length $n$ such that $\omega_i \in \{1.03, 0.97\}$ chosen uniformly. Suppose that the stock price is $A$, then the stock price after a sequence of percent changes $(\omega_1,\ldots,\omega_n)$ is $A \cdot \prod_{i=1}^n \omega_i$. In order to apply de Moivre-Laplace, we need a sum of Bernoulli random variables. Thus, we naturally proceed to apply $\exp{(\log(\cdot))}$:
