added separating line

--- a/macros.tex
+++ b/macros.tex
@@ -112,7 +112,7 @@
 
 %problem environment
 \newenvironment{problem}[2][Problem]{\large \begin{trivlist}
-\item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
+\item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}\vspace{1mm}\hline}
 
 %problems list environment
 \newlist{subprob}{enumerate}{1}
