--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{hyperref}
 \usepackage{titlesec}
 \usepackage{xcolor}
+\usepackage{titletoc}
 \definecolor{brickred}{rgb}{0.8, 0.25, 0.33}
 
 \newtheorem{lemma}{Lemma}[chapter]
@@ -21,6 +22,8 @@
 
 \begin{document}
 \maketitle
+
+\tableofcontents
 
 \chapter{Random Variables and Their Distributions}
 \input{chpts/chpt1.tex}
