--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \documentclass{report}
+\usepackage[toc,page]{appendix}
 \usepackage{lipsum}
 \usepackage[Lenny]{fncychap}
 \input{macros}
@@ -13,6 +14,7 @@
 
 \newtheorem{lemma}{Lemma}[chapter]
 \newtheorem{theorem}{Theorem}[chapter]
+\newtheorem{corollary}{Corollary}[chapter]
 
 \title{\textsc{Problems and Solutions:} \\ 
 \textit{Theory of Probability and Random Processes, 2\textsuperscript{nd} Edition} \\ 
@@ -24,7 +26,6 @@
 \maketitle
 
 \tableofcontents
-
 \chapter{Random Variables and Their Distributions}
 \input{chpts/chpt1.tex}
 \chapter{Sequences of Independent Trials}
@@ -36,5 +37,12 @@
 
 \chapter{Markov Chains with a Finite Number of States}
 \input{chpts/chpt5.tex}
+
+
+\begin{appendices}
+\chapter{Useful Matrix Lemmas}
+\input{appendices/matrix.tex}
+\end{appendices}
+
 
 \end{document}
