chpt6 status added

--- a/toc/main.tex
+++ b/toc/main.tex
@@ -91,4 +91,12 @@ Here are a list of things, both theorems and problems, that I think are importan
     \item[\cold] \textit{Define} a stationary distribution for a matrix of transition probabilities. 
 \end{itemize}
 
+\section{Random Walks on the Lattice $\Z^d$}
+\begin{itemize}[nosep]
+    \item[\cold] \textit{Define} a random walk on $\Z^d$. 
+    \item[\cold] \textit{Define} a spatially homogeneous random walk.
+    \item[\know] What is \textit{Polya's Theorem}?
+    \item[\prac] \textit{Prove} the reflection principle.
+\end{itemize}
+
 \end{document}
